# Aazan

./: .dockerignore  .gitignore  CONTRIBUTION.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  fly.toml
.sqlx/: query-0c13c0436e330d9d03b878fbeb193c81f15203fafa3223d1cecc21fc30835029.json  query-12efc1a071052a0b2d01c8cb3c1cf1ffcdbb7d54918c73c102b003a2fab6196e.json  query-91a3fd8eb4d0887ce72d9b299a95305b96f5a184ba3bee6624a4be204505c57d.json  query-bc3bd89fe076383160ef1d1b2b98655ef542425f44b956bda7501d70b29acd80.json  query-c49ddd0076097231de0010e98bf7270fa5fe9b88332cda6970ac2ebe44eb4755.json  query-fe84caa03500c8d2c7cdd7f17875bcd24f30617fd90cc608feb1f56341d3f10b.json
backend/: .dockerignore  cargo.toml
backend/migrations/: 20251015131438_create_messages_table.sql
backend/src/: main.rs
backend/src/database/: messages.rs  mod.rs  sessions.rs
backend/src/handlers/: message_handlers.rs  mod.rs  session_handlers.rs  stream_handlers.rs
backend/src/models/: message.rs
frontend/: Dioxus.toml  cargo.toml  package-lock.json  tailwindcss.config.js
frontend/assets/: output.css
frontend/src/: main.rs
frontend/src/components/: loading_spinner.rs  message_bubble.rs  microphone_button.rs  mod.rs  session_item.rs
frontend/src/controllers/: api.rs  message_bubble.rs
frontend/src/models/: api.rs  chat.rs  main.rs  message_bubble.rs  mod.rs  (+1 more)
migrations/: 20251012073054_create_sessions.sql
src/: main.rs
src/backend/: handlers.rs  message_handlers.rs  mod.rs  session_handlers.rs  stream_handlers.rs
src/database/: messages.rs  sessions.rs
src/models/: session.rs
(+12 files in other folders)
