[package]
name = "aazan"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
# Web Framework
axum = "0.8"
axum-extra = { version = "0.9", features = ["typed-header"] }

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# CORS & Static Files
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Frontend (Dioxus) - STABLE VERSION
dioxus = { version = "0.6.3", features = ["web", "router"] }

# HTTP Client (for AI API calls)
reqwest = { version = "0.12", features = ["json", "stream"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
